Add readme translation, change Qt version from 4 to 5, some refactoring

--- a/README
+++ b/README
@@ -1,4 +1,8 @@
-Курсач по программированию, представляющий собой игру "Пятнашки". Это была попытка
-написать что-то более-менее серьёзное, познакомиться с Qt, гитом и гитхабом, и при
-этом получить оценку. С оценкой всё хорошо, а вот сам проект тянет дорабатывать и
-исправлять, т.к. есть некоторые ошибки, нелепости и просто плохой код.
+It's my cource project, which is a game "gem puzzle". The purpose was to get 
+acquainted with Qt, git and github and learn how to work in a team.
+
+РљСѓСЂСЃР°С‡ РїРѕ РїСЂРѕРіСЂР°РјРјРёСЂРѕРІР°РЅРёСЋ, РїСЂРµРґСЃС‚Р°РІР»СЏСЋС‰РёР№ СЃРѕР±РѕР№ РёРіСЂСѓ "РџСЏС‚РЅР°С€РєРё". Р­С‚Рѕ Р±С‹Р»Р° РїРѕРїС‹С‚РєР°
+РЅР°РїРёСЃР°С‚СЊ С‡С‚Рѕ-С‚Рѕ Р±РѕР»РµРµ-РјРµРЅРµРµ СЃРµСЂСЊС‘Р·РЅРѕРµ, РїРѕР·РЅР°РєРѕРјРёС‚СЊСЃСЏ СЃ Qt, РіРёС‚РѕРј Рё РіРёС‚С…Р°Р±РѕРј, 
+РїРѕСЂР°Р±РѕС‚Р°С‚СЊ РІ РєРѕРјР°РЅРґРµ Рё РїСЂРё СЌС‚РѕРј РїРѕР»СѓС‡РёС‚СЊ РѕС†РµРЅРєСѓ. РЎ РѕС†РµРЅРєРѕР№ РІСЃС‘ С…РѕСЂРѕС€Рѕ, Р° РІРѕС‚ СЃР°Рј
+РїСЂРѕРµРєС‚ С‚СЏРЅРµС‚ РґРѕСЂР°Р±Р°С‚С‹РІР°С‚СЊ Рё РёСЃРїСЂР°РІР»СЏС‚СЊ, С‚.Рє. РµСЃС‚СЊ РЅРµРєРѕС‚РѕСЂС‹Рµ РѕС€РёР±РєРё, РЅРµР»РµРїРѕСЃС‚Рё 
+Рё РїСЂРѕСЃС‚Рѕ РїР»РѕС…РѕР№ РєРѕРґ.
